use computeIfAbsent, reduce autoboxing